# copper-drone

./: Cargo.toml  README.md  c  copperconfig.ron  d  video-receive.sh  video-send.sh
calibration/: cameraParameters.xml  capture.sh  charuco.py  params.xml  run.sh
src/: main.rs  sim.rs  tasks.rs
src/world/: mod.rs
