[package]
name = "drone"
version = "0.1.0"
edition = "2021"
default-run = "drone"
build = "build.rs"

# The main executable of your application
[[bin]]
name = "drone"
path = "src/main.rs"

[[bin]]
name = "drone-logreader"
path = "src/logreader.rs"
required-features = ["logreader"] # Ensures this binary is only compiled when the feature is enabled

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"] }

cu29 = { path = "../copper-rs/core/cu29" }
cu29-helpers = { path = "../copper-rs/core/cu29_helpers" }
cu-msp-src = { path = "../copper-rs/components/sources/cu_msp_src"}
cu-msp-sink = { path = "../copper-rs/components/sinks/cu_msp_sink"}
cu-msp-lib = { path = "../copper-rs/components/common/cu_msp_lib"}
cu-gstreamer = { path = "../copper-rs/components/sources/cu_gstreamer"}
cu-dynthreshold = { path = "../copper-rs/components/tasks/cu_dynthreshold"}
cu-apriltag = { path = "../copper-rs/components/tasks/cu_apriltag"}
cu-sensor-payloads = { path = "../copper-rs/components/payloads/cu_sensor_payloads"}
cu-pid = { path = "../copper-rs/components/tasks/cu_pid"}

[features]
default = [] # Default feature set, does not include logreader
logreader = ["cu29-export"] # Feature to enable logreader and its dependency

[dependencies.cu29-export]
version = "*"
optional = true # Only included when the logreader feature is enabled

[profile.release]
lto = "fat"  # Use "fat" for maximum optimization
codegen-units = 1  # Ensures better optimization (slower compile)

