[package]
name = "drone"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "drone-sim"

# The main executable of your application
[[bin]]
name = "drone"
path = "src/main.rs"

[[bin]]
name = "drone-logreader"
path = "src/logreader.rs"
required-features = ["logreader"] # Ensures this binary is only compiled when the feature is enabled

[[bin]]
name = "drone-sim"
path = "src/sim.rs"

required-features = ["sim"]

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }

cu29 = { path = "../copper-rs/core/cu29" }
cu29-helpers = { path = "../copper-rs/core/cu29_helpers" }
cu-msp-src = { path = "../copper-rs/components/sources/cu_msp_src"}
cu-msp-sink = { path = "../copper-rs/components/sinks/cu_msp_sink"}
cu-msp-lib = { path = "../copper-rs/components/common/cu_msp_lib"}
cu-gstreamer = { path = "../copper-rs/components/sources/cu_gstreamer"}
cu-dynthreshold = { path = "../copper-rs/components/tasks/cu_dynthreshold"}
cu-apriltag = { path = "../copper-rs/components/tasks/cu_apriltag"}
cu-sensor-payloads = { path = "../copper-rs/components/payloads/cu_sensor_payloads"}
cu-pid = { path = "../copper-rs/components/tasks/cu_pid"}
cu-consolemon = { path = "../copper-rs/components/monitors/cu_consolemon"}
cu29-export = { path = "../copper-rs/core/cu29_export", optional = true }

# Sim dependencies
bevy = { version = "0.15.3", default-features = false, features = ["x11", "wayland", "default_font", "bevy_render", "bevy_window", "bevy_core_pipeline", "bevy_pbr", "bevy_scene", "bevy_sprite", "bevy_gltf", "animation", "bevy_picking", "bevy_mesh_picking_backend", "tonemapping_luts", "bevy_ui", "ktx2", "jpeg", "png"], optional = true }
avian3d = { version = "0.2.1", default-features = false, features = ["bevy_scene", "collider-from-mesh", "debug-plugin", "parallel", "f32", "3d", "parry-f32"], optional = true }
cached-path = { version = "0.6.1", optional = true }
iyes_perf_ui = { version = "0.4.0", optional = true }

[features]
default = ["logreader", "sim"]
logreader = ["cu29-export"] # Feature to enable logreader and its dependency
sim = ["bevy", "avian3d", "cached-path"]
perf-ui = ["iyes_perf_ui"]


[profile.release]
lto = "fat"  # Use "fat" for maximum optimization
codegen-units = 1  # Ensures better optimization (slower compile)
